@@ -1,0 +1,1 @@
+col=00~ses=0328~src=1~rup=1121-01,0,4.007438E-01
