@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Introduced filtering on the minimum intensity of the GMF
   * Stored the job.ini parameters into a table in the datastore
   * Added a check on the IMTs coming from the risk models
   * Changed the aggregate loss table exporter to export the event tags,
